--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -62,7 +62,10 @@
 									
 									<form th:action="@{/review/delete}" method="post" style="display: inline;">
 										<input type="hidden" name="reviewId" th:value="${r.reviewId}" />
-										<input type="hidden" th:name="${_csrf.parameterName}"th:value="${_csrf.token}" />
+										<input type="hidden" 
+											th:if="${_csrf != null}"
+											th:name="${_csrf.parameterName}"
+											th:value="${_csrf.token}" />
 										 <button type="submit" onclick="deleteReview(event)">
        									 	<i class="ti ti-trash"></i>
     									 </button>
