BACK : review_edit 작업중

--- a/src/main/resources/static/css/review_read.css
+++ b/src/main/resources/static/css/review_read.css
@@ -144,7 +144,9 @@
   gap: 5px; 
   margin-left: auto;
   margin-right: 15px;
+  background : none;
  }
+
  .review-edit span:hover{
     cursor:pointer;
  }
