--- a/src/main/resources/templates/pages/my/review/review_read.html
+++ b/src/main/resources/templates/pages/my/review/review_read.html
@@ -67,6 +67,7 @@
 											th:name="${_csrf.parameterName}"
 											th:value="${_csrf.token}" />
 										 <button type="submit" onclick="deleteReview(event)">
+       									 	<div class="review-edit-icon"></div>
        									 	<i class="ti ti-trash"></i>
     									 </button>
 									</form>
