--- a/src/main/resources/static/css/review_edit.css
+++ b/src/main/resources/static/css/review_edit.css
@@ -50,7 +50,7 @@
 
 
 /* 후기작성칸 */
-#reviewWriteText {
+#reviewEditContent {
     resize: none;
     width: 100%;
     height: 300px;
@@ -65,7 +65,7 @@
 }
 
 /* 후기작성칸 클릭시 테두리없앰 */
-#reviewWriteText:focus {
+#reviewEditContent:focus {
     outline: none;
 }
 
