BACK : edit(update안 넘어가는 문제)

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,6 +27,7 @@
     <script type="application/javascript" src="/js/moim.js" defer></script>
     <script type="application/javascript" src="/js/moim_detail.js" defer></script>
     <script type="application/javascript" src="/js/review_write.js" defer></script>
+    <script type="application/javascript" src="/js/review_edit.js" defer></script>
     <script type="application/javascript" src="/js/admin.js" defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css"/>
 </head>
@@ -52,4 +53,12 @@
     </div>
 </header>
 </body>
+
+
+
+
+
+
+
+
 </html>
