--- a/src/main/resources/static/css/review_edit.css
+++ b/src/main/resources/static/css/review_edit.css
@@ -93,7 +93,7 @@
 }
 
 /* 별점wrapper */
-.review-rating-stars {
+.review-edit-rating-stars {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -140,7 +140,7 @@
 }
 
 
-.review-write-stars {
+.review-edit-stars {
     display: flex;
     gap: 6px;
     cursor: pointer;
@@ -177,7 +177,7 @@
 
     }
 
-    #reviewWritesText {
+    #reviewEditContent {
         width: 100%;
         height: 200px;
     }
@@ -188,7 +188,7 @@
         align-items: center;
     }
 
-    .review-write-rating-stars {
+    .review-edit-rating-stars {
         margin-top: 300px;
         overflow-y: hidden;
     }
