--- a/src/main/resources/templates/pages/my/review/review_edit.html
+++ b/src/main/resources/templates/pages/my/review/review_edit.html
@@ -11,7 +11,7 @@
     <div class="review-container"> <!--리뷰작성칸 전체-->
         <!--리뷰 작성란-->
         <div class="review-write-content">
-            <form id="reviewForm" method="post" action="/review/update" th:enctype="'multipart/form-data'">
+            <form id="reviewEditForm" method="post" action="/review/update" th:enctype="'multipart/form-data'">
                 <input type="hidden" name="reviewId" value="#{review.reviewId}"/>
                 <div class="review-title-box">
                     <label for="review-write-title">리뷰 제목</label>
@@ -47,14 +47,22 @@
                 </div>
                 <input type="hidden" name="reviewRate" id="ratingInput">
                 <div class="review-button-box">
-                    <button class="review-cancel-Button" type="button" onclick="location.href=document.referrer">취소하기
+                    <button class="review-cancel-Button" type="button" 
+                    	onclick="location.href=document.referrer">취소하기
                     </button>
-                    <!--  -->
                     <button class="review-enroll-Button" type="button"
-                            onclick="showReviewConfirmModal()">수정하기
+                            onclick="submitEditForm()">수정하기
                     </button>
                 </div>
-                <div id="successModal" class="modal" style="display:none;">
+                <div id="EditConfirmModal" class="modal" style="display:none;">
+                    <div class="modal-content">
+                        <p>리뷰를 수정하시겠습니까?</p>
+                    <button type="button"onclick="EditConfirm()">예</button>
+                    <button type="button" onclick="closeModal('EditConfirmModal')">아니오</button>
+
+                    </div>
+                </div>
+                <div id="successEditModal" class="modal" style="display:none;">
                     <div class="modal-content">
                         <p>수정되었습니다.</p>
                         <button id="enrollReview" onclick="enrollReview()">확인</button>
