--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -7,7 +7,8 @@
 <body>
 <main class="" layout:fragment="content">
     <div class="banner-container">
-        <img th:src="@{/images/home/1749630156_pc_main_banner_summersweet.png}" alt="banner"/>
+        <img class="pc-banner" src="/images/home/1749630156_pc_main_banner_summersweet.png" alt="banner"/>
+        <img class="mobile-banner" src="/images/home/1753862966_banner_starthobby.webp" alt="banner"/>
     </div>
     <div class="main-wrapper">
         <div class="category-container">
